[metadata]  # 包信息
name =  wind # 包名
version = 1.0 # 版本
description-file = README.md #描述文件
author = barney #作者
author-email = zyxpaomian@sina.com #作者邮箱  
classifier = 
    Intended Audience :: Developers    # 功用
    Operating System :: POSIX :: Linux # 平台
    Programming Language :: Python :: 2. # 版本
    Programming Language :: Python :: 2.7 
    Programming Language :: Python :: 3 
    Programming Language :: Python :: 2.6 

[files]
packages =
    wind # 包名
extra_files =
    requirements.txt # 依赖
[entry_points] # 模块入口
console_scripts  =
    wind-server = wind.cmd.all:main # 可执行脚本