[metadata]
name =  wind 
version = 1.0 
description-file = README.md 
author = barney 
author-email = zyxpaomian@sina.com 
classifier = 
    Intended Audience :: Developers    
    Operating System :: POSIX :: Linux 
    Programming Language :: Python :: 2.6 
    Programming Language :: Python :: 2.7 
    Programming Language :: Python :: 3 
    Programming Language :: Python :: 2.6 

[files]
packages =
    wind 
extra_files =
    requirements.txt 
[entry_points] 
console_scripts  =
    wind-server = wind.cmd.all:main 
